# multiversal-rss-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rss.opml  rss.xml
.github/workflows/: build_nix.yml
src/: main.rs
