[package]
name = "multiversal-rss-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
humantime = "2.2.0"
reqwest = { version = "0.12.20", default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = "1.0.140"
swc_html_ast = { version = "13.0.0", features = ["serde"] }
tokio = "1.45.1"
xml = "0.8.20"
